Changelog
=========

1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2012-08-13)
------------------

- Add visualClear block to be sure content is displayed after blocks.
- Use link for css registry.

1.2 (2011-12-30)
----------------

- add new classifiers
- update manage portlet contextual to work as default one

1.1 (2011-10-06)
----------------

- change the slot used for portlets: IAboveContentBody and IBelowContentBody
  [toutpt]

1.0 (2011-10-06)
----------------

- update masonry to v2.0.110927 and imagesLoaded plugin to v1.0.4
  [toutpt]

1.0b2 - (2011-04-07)
--------------------

- add jquery.imagesloaded plugin to fix images handling in masonry
  [toutpt]

1.0b1 - (2011-02-24)
--------------------

- Initial release