@@ -30,13 +30,24 @@
   </h1>
   <div id="content-core">
   <p i18n:domain="plone">
-    <a href=""
-         class="link-parent"
-         tal:attributes="href string:${context/absolute_url}"
-         i18n:translate="return_to_view">
-      Return
+      <a href=""
+           class="link-parent"
+           tal:attributes="href string:${context/absolute_url}"
+           i18n:translate="return_to_view">
+        Return
+      </a>
+
+    <tal:block tal:define="is_portal_root context/@@plone_context_state/is_portal_root;"
+               tal:condition="not:is_portal_root">
+    -
+    <a class="link-parent" tal:condition="plone_view/getParentObject|nothing"
+       tal:attributes="href python:plone_view.getParentObject().absolute_url()+'/@@manage-portlets'"
+       i18n:translate="">
+       Go to parent folder
     </a>
+    </tal:block>
   </p>
+  <p><a tal:attributes="href string:${context/absolute_url}/@@manage-collective.masonry">Manage masrony configuration for this page</a></p>
 
   <h2>Manage portlets above the content</h2>
   <div class="portlet-manager">
