@@ -1,7 +1,7 @@
 <div id="portlets-above"
      i18n:domain="collective.masonry" tal:define="inmanage python:request.get('URL').endswith('@@manage-portlets') or 'portlets++' in request.get('URL')">
-    <tal:block tal:condition="not:inmanage">
+    <div tal:attributes="class view/get_mode" tal:condition="not:inmanage">
         <div id="portletsAboveContent" tal:content="structure provider:masonry.above" /> 
         <div class="visualClear"/>
-    </tal:block>
+    </div>
 </div>
