@@ -4,7 +4,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add a configuration panel to define a mode for each area (above and below)
+  of each page.
 
 
 1.2.1 (2012-08-13)
